# study-space

./: .gitignore  CMakeLists.txt  README.md  Stopwatch.h  my_torch.ipynb  ready_to_commit.sh  rm_aout.sh  run_build.sh  run_clean.sh  run_test.sh  triangulation_DLT.ipynb
01_basic/term/: 278949.py  구현범위.txt
01_cpp_14/inheritance/: inheritance.cc
01_cpp_14/perfect_forwarding/: cpp_reference.cc
01_cpp_14/template/: 05_variadic_template.cc  function_object.cc  generic_programming.cc  result_of.cc
01_cpp_14/thread/: async.cc  chrono.cc  detach.cc  packaged_task.cc
01_cpp_intermediate/cpp_11/: all_of_1.cpp
01_cpp_intermediate/future/: future.cpp
01_cpp_intermediate/perfect_forwarding/: rvalue_reference.cpp
01_cpp_intermediate/template/: bubble_sort.cpp  template_specialization.cpp  variadic_template.cpp
02_application_scaffold/src/: application.h  application_scaffold.h  main.cpp
02_cpp_17/language_features/: constexpr_.cc  constexpr_constructor_.cc  fold_expression.cc  guaranteed_copy_elision_.cc  if_constexpr_.cc  if_init_.cc  inline_variables_.cc  multi-return_.cc  nested_namespace_.cc
02_cpp_17/new_algiritem/: clamp_.cc  for_each_n_.cc  sample_.cc  search_.cc
02_cpp_17/new_headers/: any_.cc  string_view_.cc
02_design_pattern/03_factory/: CMakeLists.txt
02_design_pattern/05_state_machine/: README.md
03_gtest/: run_build.sh
03_gtest/src/: main.cpp  sample.h
03_gtest/test/: CMakeLists.txt
03_gtest/test/src/: test_main.cpp
03_gui/my_tkinter/: main.py
03_observer/src/: main.cpp
04_cpp_17/new_headers/: variant_.cc  variant_visitor_pattern_.cc
04_design_pattern/03_factory/: run_build.sh
04_design_pattern/06_mediator/: main.cc  mediator.h
04_googletest/: CMakeLists.txt  README.md  run_test.sh
04_googletest/src/: calc.cpp  calc.h  main.cpp  sum.cpp
04_gtest/src/: sample.cpp
04_network/: client.py  client_interface.py  server.py  server_interface.py
04_network/packet/: basic_packet_format.py  direction_packet.py  gaze_packet.py  hand_skeleton_packet.py  touch_packet.py  voice_packet.py
05_network/01_basic/: run_build.sh  run_clean.sh  sample_client.cc
05_network/02_multicast/: MulticastReceiver.cc  run_build.sh
06_cmake/modern_cmake/cmake_tutorial/my_libraries/: CMakeLists.txt  run_build.sh
06_cmake/modern_cmake/cmake_tutorial/my_libraries/cmake/: MyLibrariesConfig.cmake
06_cmake/modern_cmake/cmake_tutorial/my_libraries/include/my_libraries/: my_library_a.hpp
06_cmake/modern_cmake/cmake_tutorial/my_libraries/src/: my_library_a.cpp
06_cmake/modern_cmake/cmake_tutorial/some_libraries/: CMakeLists.txt  run_build.sh
06_cmake/modern_cmake/cmake_tutorial/some_libraries/cmake/: SomeLibrariesConfig.cmake
06_cmake/modern_cmake/cmake_tutorial/some_libraries/include/some_libraries/: some_library_b.hpp
06_cmake/modern_cmake/cmake_tutorial/some_libraries/src/: some_library_b.cpp
3d-recon/02-NeRF/: load_mvmp.py  run.sh  run_train.py
99_self/: nullptr.cc
99_self/02_function/: func1.py  function.py  variadic_func.py
99_self/03_data_type/: dict.py  fstring.py  list.py  string.py  tuple.py
99_self/04_module/: datetime_1.py  glob_1.py  mstring.py  os.py  random_1.py
99_self/05_file/: file.py  file_read.py  readme
99_self/06_object_oriented/: class.py  composite.py  inheritance.py  method.py  person.py
99_self/07_thread/: threads.py
99_self/08_operator/: comparator.py  op.py  ternary.py
99_self/template/: 03_function_object.cc  06_sizeof_pack.cc
acmicpc/01_brute_force/: all_permutation_10974.cpp  body_7568.cpp  chess_1018.cpp
acmicpc/02_divide_conquer/: a.out  z_1074.cpp
acmicpc/03_dynamic_programming/: .guitarlist_1495.cpp.swp  biggest_rectangle_1915.cpp  candy_game_17137.cpp  christmas_tree_1234.cpp  pipe.cpp  seat_2302.cpp  step_2579.cpp
addon/: a.out
algorithm/2025/: 01-dfs-shortestpath.cc  03-backtracking-nqueen.cc  a.out  bfs.cc  dijkstra.cc  (+2 more)
algospot/: LESSONS.md  learned.txt
cpp/03_gtest/: CMakeLists.txt  run_clean.sh
cpp/03_gtest/src/: main.cc
cpp/03_gtest/test/: CMakeLists.txt
cpp/99_self/python_embedding/: CMakeLists.txt  cpp_python  main.cc  run_build.sh
crosscompile/: CMakeLists.txt  run_build.sh
curl/: CMakeLists.txt  run_build.sh
doc/: class_diagram.txt
etc/: config.json
make-deb/: app_1.0.0-1.deb  run_build.sh  run_install.sh  run_remove.sh
ml/: 01_matrix_training.py  02_binary_classification.py
onenote/: partial_sum.cc
project/doipgen/: CMakeLists.txt  README.md  run_build.sh
project/doipgen/addon/: test_server.cpp
project/doipgen/src/: doip_packet_builder.cc  main.cc
project/doipgen/src/menu/: base_menu.h  menu_item.h
project/doipgen/src/parser/: config_parser.cc  preset_parser.cc
project/doipgen/src/report/: reporter.cc
project/doipgen/src/transport/: connection.cc  connection.h  connection_manager.cc  connection_manager.h
project/driver-tracker/: CMakeLists.txt
project/driver-tracker/addon/: main.cc
project/driver-tracker/example/: shm_r  shm_r.c  shm_w
project/driver-tracker/src/: driver_tracker.cc  driver_tracker.h  main.cc
project/driver-tracker/src/estimator/: estimator.cc  estimator.h
project/driver-tracker/src/transfer/: message_format.h  transfer_interface.h  transfer_manager.cc  transfer_manager.h  utility.h
project/driver-tracker/src/transfer/messagequeue/: messagequeue_manager.cc  messagequeue_manager.h
project/driver-tracker/src/transfer/sharedmemory/: sharedmemory_manager.cc  sharedmemory_manager.h
project/driver-tracker/src/transfer/socket/: socket_manager.cc  socket_manager.h
project/face-detector/01-seeta/: CMakeLists.txt
project/face-detector/01-seeta/model/: readme.md
project/face-detector/01-seeta/src/: common.h  face_detector.cc  face_detector.h  image_manager.cc  image_manager.h  main.cc  video_manager.cc  video_manager.h
rust/: readme.md
src/: DoipSimulator.cpp  DoipSimulator.h  doip_packet_builder.h  main.cpp
template/: README.md  bellman_ford.cpp  dijkstra.cpp  prim.cpp
unity/01_udp/03-client-cpp/: CMakeLists.txt
unity/01_udp/03-client-cpp/src/: main.cc  transfer_manager.cc  transfer_manager.h
(+318 files in other folders)
